--- a/css/styles.css
+++ b/css/styles.css
@@ -3,61 +3,219 @@
    
 }
 
-@media (max-width:600px){}
+h1{
+   font-size: 2.027rem;
+}
+h2{
+   font-size: 1.802rem;
+}
+
+h3{
+   font-size: 1.266rem;
+}
 
 
-#header{
+
+
+
+@media (max-width:768px){
+
+
+   .header{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr
+      );
+      
+   }
+
+   .header img{
+
+   max-width: 70%;
+   padding-left: 1em;
+   }
+
+   img{
+      width: 100%;
+   }
+
+    ul{
+   list-style: none;
+   display: flex;
+   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+   font-size: larger;
+   justify-content: space-evenly;
+   
+   }
+
+   ul :nth-child(1){
+      text-decoration: none;
+      color: black;
+   }
+
+   ul :nth-child(2){
+      text-decoration: none;
+color: black;
+   }
+
+   .grid-1{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-template-areas: 
+      "pic1 pic1 pic1"
+      "pic2 pic3 pic4";
+   
+   }
+
+   .grid-1 :nth-child(1){
+      grid-area: pic1;
+      padding: 1em;
+   }
+
+   .grid-1 :nth-child(2){
+      grid-area: pic2;
+      padding: 1em;
+   }
+
+   .grid-1 :nth-child(3){
+      grid-area: pic3;
+      padding: 1em;
+   }
+
+   .grid-1 :nth-child(4){
+      grid-area: pic4;
+      padding: 1em;
+   }
+
+
+#first-article p{
    display: grid;
-   grid-template-columns: repeat(2, 1fr
-   );
+   grid-template-columns: 1fr;
+   padding: 0;
 
 }
 
-img{
-   width: 100%;
+
+#Behind-the-dough{
+   display: flex;
+}
+
+#Behind-the-dough h2{
+   text-align: center;
+}
+
+
+#Comments {
+
+}
+
+#Try-it-with h2{
+   text-align: center;
+}
+
+.grid-4{
+  
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4,1fr);
+  
+
+}
+
+.grid-4 h5{
+   text-align: center;
   
 }
-
-ul{
- list-style: none;
-display: flex;
-font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-ul :nth-child(1){
-   text-decoration: none;
-}
-
-ul :nth-child(2){
-   text-decoration: none;
-}
-
-.grid-1{
-   display: grid;
-   grid-template-columns: repeat(3, 1fr);
-   grid-template-rows: repeat(2, 1fr);
-   grid-template-areas: 
-   "pic1 pic1 pic1"
-   "pic2 pic3 pic4";
   
+.grid-4 :nth-child(1){
+   grid-column: 1 / 3;
+   padding: 1em;  
+   padding-bottom: 5em;
+   
 }
 
-.grid-1 :nth-child(1){
-   grid-area: pic1;
+.grid-4 :nth-child(2){
+   grid-column:  3/ 5;
+   padding: 1em;
+   padding-bottom: 5em;
+   text-align: center;
+}
+
+
+.grid-4 :nth-child(3){
+   grid-column: 1 /3;
+   padding: 1em;
+   
+}
+
+.grid-4 :nth-child(4){
+   grid-column: 3 / 5;
+   padding: 1em;  
+}
+}
+
+
+
+
+
+
+
+
+
+@media (min-width:758px) and (max-width:960px){}
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer{
+   background-color: black;
+   color: white;
+   text-align: center;
    padding: 1em;
 }
 
-.grid-1 :nth-child(2){
-   grid-area: pic2;
-   padding: 1em;
+
+#Comments{
+   background-color: #000;
+   color: white;
+margin: auto;
+padding: 1em;
+max-width: 700px;
+background-size: cover;
 }
 
-.grid-1 :nth-child(3){
-   grid-area: pic3;
-   padding: 1em;
+
+#Comments h2{
+text-align: center;}
+
+
+
+#first-article a:link,
+#first-article a:visited {
+  display:inline-block;
+  padding: .5em 1em;
+  background-color: #000;
+  color: #fff;
+  text-decoration: none;
+  border: 2px solid #000;
+  border-radius: 10px;
+
+margin:auto;
 }
 
-.grid-1 :nth-child(4){
-   grid-area: pic4;
-   padding: 1em;
+#first-article a:hover,
+#first-article a:focus{
+   background-color: #fafafa47;
+   color: #000;
+   margin: auto;  
 }
-
